ingress-trigger.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "30"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "1800"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "1800"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/healthcheck-path: "/live"
  name: ingress-trigger
  namespace: lmwprac
spec:
  rules:
    - host: trigger.lmwprac.dev.clusters.easlab.co.uk
      http:
        paths:
          - backend:
              service:
                name: el-el-eventlistener
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - trigger.lmwprac.dev.clusters.easlab.co.uk
      secretName: trigger-lmwprac-tls
